<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch !</string>

    <string name="login_account">Sign in !</string>
    <!--    <string name="login_gmail">Sign in with Google</string>-->

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"It's lunch time!"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Enter</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">email not found</string>
    <string name="info_no_id_found">id user not found</string>
    <string name="info_no_username_found">username not found</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Yes !</string>
    <string name="popup_message_choice_no">No</string>
   <!-- <string name="check_box_is_mentor">Etes-vous un mentor ?</string>-->


    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <string name="open_view_account">open view_account</string>


    <string name="facebook_application_id">516165432648011</string>
    <string name="fb_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb516165432648011</string>

    <string name="title_activity_profile">Profile2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>

    <!-- CHAT ACTIVITY -->
    <string name="toolbar_title_worker_chat_activity">Chats de discussions</string>
    <string name="text_input_title_worker_chat_activity">Composer votre message</string>
    <string name="button_title_worker_chat_activity">SEND</string>
    <string name="text_view_worker_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>

    <!-- RECYCLER VIEW RESTAURANT -->
    <string name="restaurant_name">Restaurant\'s name</string>
    <string name="restaurant_type">restaurant type</string>
    <string name="restaurant_adress">restaurant adress</string>
    <string name="restaurant_open">restaurant open</string>
    <string name="restaurant_distance">restaurant distance</string>
    <string name="scarlette_is_joining">Scarlette is joining!</string>
    <string name="is_eatin_French_restaurant">scarlette is eating french (Le Zinc)</string>
    <string name="button_website">button website</string>
    <string name="button_like">button like</string>
    <string name="button_phone">button phone</string>
    <string name="no_worker_eating">No worker eating</string>
    <string name="no_worker_eat_in_this_restaurant_today">No worker eat in this restaurant today !</string>
    <string name="no_restaurant_was_found">Your selection is not in the original list ! Try again !</string>


</resources>
