<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map_view">

    <fragment
        android:id="@+id/nav_list_people"
        android:name="com.uimainon.go4lunch.controllers.fragments.ListPeople"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_list_people" />

    <fragment
        android:id="@+id/nav_list_restaurant"
        android:name="com.uimainon.go4lunch.controllers.fragments.ListRestaurants"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_list_restaurant" />

    <fragment
        android:id="@+id/nav_lunch"
        android:name="com.uimainon.go4lunch.controllers.fragments.YourLunch"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_your_lunch" />

    <fragment
        android:id="@+id/nav_map_view"
        android:name="com.uimainon.go4lunch.controllers.fragments.MapViewFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.uimainon.go4lunch.controllers.fragments.SettingFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_details_restaurant"
        android:name="com.uimainon.go4lunch.controllers.activities.DetailsRestaurantActivity"
        android:label="@string/menu_send"
        tools:layout="@layout/activity_details_restaurants" />
</navigation>