<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24px"
        android:title="@string/bottom_navigation_menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_black_24px"
        android:title="@string/bottom_navigation_menu_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24px"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />
</menu>