<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

    <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/content_info_block"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_name_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="Le Zinc"
                android:paddingStart="@dimen/default_large_margin_list_restaurant"
                android:paddingTop="@dimen/default_large_margin_list_restaurant"
                android:textStyle="bold"
                android:textSize="@dimen/default_text_size"
                android:contentDescription="@string/restaurant_name"
                android:paddingBottom="@dimen/default_large_margin_list_restaurant" />

            <LinearLayout
                android:paddingBottom="@dimen/default_large_margin_list_restaurant"
                android:layout_width="wrap_content"
                android:id="@+id/content_restaurant_type_adress"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_type_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_large_margin_list_restaurant"
                    android:paddingTop="@dimen/default_large_margin_list_restaurant"
                    android:textStyle="bold"
                    android:text="French"
                    android:textSize="@dimen/default_text_size"
                    android:contentDescription="@string/restaurant_type" />

                <TextView
                    android:id="@+id/item_adress_restaurant"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="12 rue du Faubourg Poissonnière"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_large_margin_list_restaurant"
                    android:paddingTop="@dimen/default_large_margin_list_restaurant"
                    android:textSize="@dimen/default_text_size"
                    android:contentDescription="@string/restaurant_adress"/>
            </LinearLayout>

            <TextView
                android:id="@+id/item_hour_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open until 7pm"
                android:paddingStart="@dimen/default_large_margin_list_restaurant"
                android:paddingTop="@dimen/default_large_margin_list_restaurant"
                android:textStyle="italic"
                android:textSize="@dimen/default_text_size"
                android:contentDescription="@string/restaurant_open"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/content_image_block"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_distance_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120m"
                    android:paddingStart="@dimen/default_large_margin_list_restaurant"
                    android:paddingTop="@dimen/default_large_margin_list_restaurant"
                    android:textSize="@dimen/default_text_size"
                    android:contentDescription="@string/restaurant_distance"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/nbr_people_picto"
                        android:layout_width="@dimen/default_large_margin_chat"
                        android:layout_height="@dimen/default_large_margin_chat"
                        android:layout_marginStart="@dimen/default_large_margin_list_restaurant"
                        tools:srcCompat="@drawable/ic_person_outline_24px"
                        android:contentDescription="TODO" />
                    <TextView
                        android:id="@+id/item_nbr_people_restaurant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(3)"
                        android:paddingStart="@dimen/default_large_margin_list_restaurant"
                        android:paddingTop="@dimen/default_large_margin_list_restaurant"
                        android:textSize="@dimen/default_text_size"
                        android:contentDescription="@string/restaurant_distance"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/restaurant_like"
                    android:layout_width="@dimen/size_stars_restaurant"
                    android:layout_height="@dimen/size_stars_restaurant"
                    android:layout_marginStart="@dimen/default_large_margin_list_restaurant"
                    tools:srcCompat="@drawable/ic_star_24px"
                    android:contentDescription="TODO" />
            </LinearLayout>
            <ImageView
                android:id="@+id/restaurant_image"
                android:layout_width="@dimen/size_image_list_restaurant"
                android:layout_height="@dimen/size_image_list_restaurant"
                android:layout_marginStart="@dimen/default_large_margin_list_restaurant"
                tools:srcCompat="@drawable/ic_logo_auth"
                android:contentDescription="TODO" />

        </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>